# playground

./: .firebaserc  .gitignore  LICENSE  README.md  build.gradle  build.yaml  components.json  compose.yaml  middleware.ts  next-auth.d.ts  next.config.js  next.config.mjs  package-lock.json  package.json  pubspec.yaml  test.http  tsconfig.json
1203/: BasicPV.py  PV.py  Util.py
API TEST/: API 명세서.xlsx  UserRegisterTest.http
Flask/: Basic.py
Go/: gota-tutorial.go
Work/: 1207  Calc.py  INFO.xlsx  pv_0819.py
YouTubeDownloader/: Mypytube.py  Qt.py
app/: error.tsx  globals.css  layout.tsx  nav-bar.tsx  page.tsx
backend/: .dockerignore  .gitignore  build.gradle.kts
borad/: next-auth.d.ts
chat/: README.md  package-lock.json
commerce/: README.md  build.yaml
components/: add-plan-form.tsx  app-shell.tsx  bottom-nav.tsx  button-component.tsx  dropdown-slider-component.tsx  error-component.tsx  icon-button-component.tsx  image-upload-button.tsx  input-component.tsx  loading-component.tsx  nav-component.tsx  post-form-component.tsx  rating-star-component.tsx  select-address-form.tsx  select-country-form.tsx  signin-button-component.tsx  signout-button-component.tsx  text-area-component.tsx  (+1 more)
python/fast-api/: README.md  docker-compose.yaml  pyproject.toml  requirements.txt
python/fast-api/app/: main.py
python/fast-api/app/core/: database.py
python/fast-api/app/features/feed/: dtos.py  handlers.py  models.py
python/fast-api/app/shared/: models.py
rust/4_actix/: Cargo.toml  README.md
rust/4_actix/src/: handlers.rs  models.rs  routes.rs  state.rs
(+5784 files in other folders)
