[package]
name = "board"
version = "0.1.0"
edition = "2024"
author = ["karma"]
default-run = "board-service"

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7.0"  # 비동기
serde = {version="1.0.110", features=["derive"]}    # 데이터 직렬화
chrono = {version="0.4.11", features=["serde"]}

[[bin]]
name = "board-service"